               Risoe.BINfileData2RLum.Analysis() objects,

             • if the argument ‘pos’ or ‘grain’ contains invalid
               entries the function will not longer return an error.
               The invalid values are discarded and the function tries
               to import values for valid positions or grains only,

             • the function gained the new argument ‘dtype’ to further
               limit the converted data types during the conversion
               (#269)

  Internals:

         • New internal function ‘.create_UID()’ added to create the
           unique identifier for RLum-objects. The new function reduces
           significantly the overhead while producing the objects.

         • Package 'digits' removed from the dependency list and the
           functionality (creating a unique identifier for
           RLum-objects) was implemented using a self-written function.

         • Package 'rgl' was removed from suggests and replaced by the
           package 'plotly'.

         • Package 'RLumModel' added as suggested package.

         • Package 'RLumShiny' added as suggested package.

         • Package 'rmarkdown' added as suggested package.

         • Package 'pander' added as suggested package.

         • Package 'rstudioapi' added as suggested package.

         • Package 'rjags' added as suggested package.

         • New S3 generic ‘bin’ implemented, this method dispatches to
           the S4 method ‘bin_RLum.Data’ for the ‘RLum.Data’ objects.

         • Add S3 generics to support all combinations for the function
           ‘is’, e.g., ‘is.RLum.Data.Curve’.

         • Add S3 generic for method ‘subset’ of objects of type
           ‘Risoe.BINfileData’.  This is a little bit inconsistent,
           however, still a lot of user using this objects created by
           the function ‘read_BIN2R(..., fastForward = FALSE)’ and this
           method tremendously simplifies the work with this objects.
