@@ -1958,11 +1958,11 @@
 </td>
 <td class=cellinside><br /> Exports a Risoe.BINfileData object in a *.bin or *.binx file that can be<br /> opened by the Analyst software or other Risoe software.<br />
 </td>
-<td class=cellinside>0.3.2
+<td class=cellinside>0.3.3
 </td>
-<td class=cellinside>2016-05-02
+<td class=cellinside>2016-05-25
 </td>
-<td class=cellinside>09:44:00
+<td class=cellinside>16:39:03
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
